# wordle-bot

./: .env.example  README.md  langgraph.json  pyproject.toml  test_words.txt
wordle_bot/: agent.py  guess.py  nodes.py  state.py
wordle_bot/notebooks/: test.ipynb
